[project]
name = "scale-olm"
version = "0.8.0"
description = "ORIGEN Library Manager: A tool for building and managing ORIGEN reactor data libraries"
authors = [
    { name = "William Wieselquist", email = "ww5@ornl.gov" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["SCALE", "ORIGEN", "Library"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Nuclear Physics",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: BSD-2",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "matplotlib",
    "scipy",
    "numpy",
    "pytest",
    "pydantic",
]
requires-python = ">=3.9"

[project.urls]
documentation = "https://code.ornl.gov/scale/code/olm"
bug-tracker = "https://code.ornl.gov/scale/code/olm/issues"
source = "https://code.ornl.gov/scale/code/olm"

[project.scripts]
olm = "scale.olm.__main__:olm"

[tool.setuptools.packages.find]
include = ["scale.*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
